color's and font-weight

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section class="ingredients">
         <h2>Modo de preparo</h2>
-        <h3>ingredientes:</h3>
+        <strong>ingredientes:</strong>
         <ul>
           <li>200g de biscoitos maisena</li>
           <li>100g de manteiga</li>
@@ -40,7 +40,7 @@
           <li>1 xícara de morangos picados</li>
           <li>1 xícara de mirtilos</li>
         </ul>
-        <h3>Modo de preparo:</h3>
+        <strong>Modo de preparo:</strong>
         <ol>
           <li>
             Triture os biscoitos e misture com a manteiga derretida. Forre uma
@@ -55,8 +55,8 @@
           </li>
           <li>Cubra com as frutas e sirva gelado.</li>
         </ol>
+        <button>Reportar Erro</button>
       </section>
-      <button>Reportar Erro</button>
     </main>
   </body>
 </html>
